# photoHdler

./: .gitignore  BUILD.md  README.md  build_exe.bat  main.py  organize_photos.py  organize_photos_gui.py  pyproject.toml  requirements.txt
.github/workflows/: build-release.yml
photohdler/: __init__.py  cli.py  manager.py  photo.py
tests/: __init__.py  test_cli.py  test_manager.py  test_photo.py
